2007-06-30 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadSvKeylistCmd.c: Fixed off-by-1 error in argument
	parsing for SvKeylkeysObjCmd(). See Tcl Bug #1575342.

	* generic/threadPoolCmd.c: Fixed Tcl Bug #1512225 (tpool::wait and
	tpool::cancel setting wrong values to passed variables)

2007-05-26 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPoolCmd.c: Fixed [tpool::post -nowait] to start
	  one new worker thread only if there are none started. 

2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/vc/rules.vc:     Updated the nmake build system to match
	* win/vc/nmakehlp.c:   current 8.5. (support for non-intel build
	* win/vc/makefile.vc:  and recent versions of msvc compiler)
	* win/thread.rc:       Fixed line endings.

2006-12-26 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadCmd.c: Fixed race condition for
	creating preserved threads.

	* generic/threadSv.c: Removed memory leak.

2006-10-07 Zoran Vasiljevic <zv@archiware.com>

	*** 2.6.5 TAGGED FOR RELEASE (thread-2-6-5) ***

	Main changes since the last release:
	------------------------------------

	Set versioning of (embedded) Ttrace package to
	the same revision level as the main Thread package.

	The Ttrace must now explicitly be loaded in every
	new thread created by [thread::create] command.
	
	The [package require Ttrace] automatically loads 
	Thread package as well.

	NOTE: be sure to configure/make/make install
	because the pkgIndex.tcl loader file is modified.


2006-10-06 Zoran Vasiljevic <zv@archiware.com>

	* generic/threadPool.c:
	* generic/threadCmd.c: Removed Tcl_PkgRequire 
	from the new thread initialization and just 
	initialize the C-aspect of the extension by 
	calling Therad_Init. This basically discards 
	the last checkin, which was in a sense bad
	as it made thread creation very expensive
	operation.

	* pkgIndex.tcl.in: Added separate handling for
	Ttrace loading. Now, users needing Ttrace caps
	must "package require Ttrace" which in turn